--- a/application/templates/newtransaction.html
+++ b/application/templates/newtransaction.html
@@ -3,8 +3,15 @@
 {% block body %}
 
 <form method="POST" action="{{url_for('create_transaction')}}">
-    <input type="text" name="name" />
-    <input type="submit" value="Submit transaction" />
+    <div><label for="amount">Amount: </label><input type="number" min="0.00" max="1000000.00" step="0.01" name="amount" /></div>
+    <div><label for="counterparty">Counterparty: </label><input type="text" name="counterparty" /></div>
+    <div><label for="message">Message or reference number: </label><input type="text" name="message" /></div>
+    <div><label for="creditordebit">Credit or debit: </label><select name="creditordebit">
+        <option value="DEBIT">Debit</option>
+        <option value="CREDIT">Credit</option>
+    </select></div>
+    <div><label for="name">Name: </label><input type="text" name="name" /></div>
+    <div><input type="submit" value="Submit transaction" /></div>
 
 </form>
 
