--- a/application/templates/transaction.html
+++ b/application/templates/transaction.html
@@ -15,7 +15,7 @@
   </tr>
   <tr>
       <td>Counterparty</td>
-      <td>{{transaction.counterparty}}</td>
+      <td>{{transaction.counterparty_name}}</td>
   </tr>
   <tr>
       <td>Message</td>
