--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -6,6 +6,13 @@
   </head>
 
   <body>
+    {% if current_user.is_authenticated %}
+    <p>Logged in as {{ current_user.name }}</p>
+    <a href="{{ url_for('auth_logout') }} ">Logout</a>
+    {% else %}
+    <a href="{{ url_for('auth_login') }}">Log in</a>
+
+    {% endif %}
     <ul>
       <li><a href="{{url_for('get_transactions')}}">Transactions</a></li>
       <li><a href="{{url_for('transaction_form')}}">Add a transaction</a></li>
