--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -11,6 +11,7 @@
     <a href="{{ url_for('auth_logout') }} ">Logout</a>
     {% else %}
     <a href="{{ url_for('auth_login') }}">Log in</a>
+    <a href="{{ url_for('create_user') }}">Sign up</a>
 
     {% endif %}
     <ul>
