--- a/application/templates/transaction.html
+++ b/application/templates/transaction.html
@@ -21,6 +21,10 @@
       <td>Message</td>
       <td>{{transaction.message}}</td>
   </tr>
+  <tr>
+      <td>Bank account ID</td>
+      <td>{{transaction.bankaccount_id}}</td>
+  </tr>
 </table>
 
 <h6>Change the message</h6>
