--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -7,18 +7,20 @@
 
   <body>
     {% if current_user.is_authenticated %}
-    <p>Logged in as {{ current_user.name }}</p>
-    <a href="{{ url_for('auth_logout') }} ">Logout</a>
+    <ul>
+      <p>Logged in as {{ current_user.name }}</p>
+      <li><a href="{{ url_for('bankaccounts') }}">Bank Accounts</a></li>
+      <li><a href="{{url_for('get_transactions')}}">Transactions</a></li>
+      <li><a href="{{url_for('transaction_form')}}">Add a transaction</a></li>
+      <li><a href="{{url_for('categories')}}">Categories</a></li>
+      <li><a href="{{ url_for('auth_logout') }} ">Logout</a></li>
+    </ul>
     {% else %}
     <a href="{{ url_for('auth_login') }}">Log in</a>
     <a href="{{ url_for('create_user') }}">Sign up</a>
 
     {% endif %}
-    <ul>
-      <li><a href="{{ url_for('bankaccounts') }}">Bank Accounts</a></li>
-      <li><a href="{{url_for('get_transactions')}}">Transactions</a></li>
-      <li><a href="{{url_for('transaction_form')}}">Add a transaction</a></li>
-    </ul>
+
     {% block body %}
     
     <p>
