amounts as decimals, account balance changes with new transactions

--- a/application/templates/transactionlist.html
+++ b/application/templates/transactionlist.html
@@ -14,7 +14,7 @@
     <tr>
         <td>
             <a href="{{ url_for('get_transaction', transaction_id=transaction.id) }}">
-                {{ transaction.id }}
+                {{ transaction.booking_date }}
 
             </a>
         </td>
