--- a/application/templates/auth/loginform.html
+++ b/application/templates/auth/loginform.html
@@ -4,21 +4,21 @@
 {{ error }}
 
 <form method="POST" action="{{ url_for('auth_login')}}" >
-<table>
-    <tr>
-        <td>{{ form.username.label }}</td>
-        <td>{{ form.username }}</td>
-    </tr>
-    <tr>
-        <td>{{ form.password.label }}</td>
-        <td>{{ form.password }}</td>
-    </tr>
-    <tr>
-        <td colspan="2">
-            <input type="submit" value="Log in" />
-        </td>
-    </tr>
-</table>
+    <table>
+        <tr class="form-group">
+            <td>{{ form.username.label(class_="form-control") }}</td>
+            <td>{{ form.username(class_="form-control") }}</td>
+        </tr>
+        <tr class="form-group">
+            <td>{{ form.password.label(class_="form-control") }}</td>
+            <td>{{ form.password(class_="form-control") }}</td>
+        </tr>
+        <tr class="form-group">
+            <td colspan="2">
+                <input class="form-control" type="submit" value="Log in" />
+            </td>
+        </tr>
+    </table>
 
 </form>
 {% endblock %}
