--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -8,7 +8,7 @@
   </head>
 
   <body>
-    <div class="container-fluid">
+    <div class="">
       <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Pivo Slayer</a>
@@ -33,13 +33,15 @@
 
         {% endif %}
       </nav>
-      <div>
-        {% block body %}
-        
-        <p>
-	     Content
-        </p>
-        {% endblock %}
+      <div class="container">
+        <div class="col-md-6 col-md-offset-6">
+          {% block body %}
+
+          <p>
+  	     Content
+          </p>
+          {% endblock %}
+        </div>
       </div>
     </div>
   </body>
