--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -5,5 +5,13 @@
 MÖS MAAILMA
 </p>
 
+<p>Pivo Slayer currently has the following features:</p>
+<ul>
+    <li>Create a user name</li>
+    <li>Create bank accounts for the user</li>
+    <li>Create transactions and attach them to the account (Account balance will update as you add transactions!)</li>
+    <li>Browse your accounts and see your transactions on each account</li>
+    <li>Create categories for transactions - cannot yet attach transactions to categories, sadly.</li>
+</ul>
 
 {% endblock %}
