Can add categories to transactions

--- a/application/templates/newtransaction.html
+++ b/application/templates/newtransaction.html
@@ -79,6 +79,17 @@
                 </ul>
             </td>
         </tr>
+        <tr>
+            <td>{{ form.category.label }}</td>
+            <td>{{ form.category }}</td>
+            <td>
+                <ul>    
+                {% for error in form.category.errors %}
+                    <li>{{ error }}</li>
+                    {% endfor %}
+                </ul>
+            </td>
+        </tr>
     </table>
     <div><input type="submit" value="Submit transaction" /></div>
 
