--- a/application/templates/transaction.html
+++ b/application/templates/transaction.html
@@ -25,6 +25,10 @@
       <td>Bank account ID</td>
       <td>{{transaction.bankaccount_id}}</td>
   </tr>
+  <tr>
+      <td>Category</td>
+      <td>{{transaction.category_name}}</td>
+  </tr>
 </table>
 
 <h6>Change the message</h6>
