--- a/application/templates/transactionlist.html
+++ b/application/templates/transactionlist.html
@@ -9,6 +9,7 @@
         <th>Counterparty Name</th>
         <th>Credit or debit</th>
         <th>Message</th>
+        <th>Category</th>
     </tr>
     {% for transaction in transactions %}
     <tr>
@@ -22,6 +23,7 @@
         <td>{{ transaction.counterparty_name }}</td>
         <td>{{ transaction.credit_or_debit }}</td>
         <td>{{ transaction.message }}</td>
+        <td>{{ transaction.category_id }}</td>
     </tr>
     {% endfor %}
 </table>
