Several summary timeframes available

--- a/application/templates/transaction.html
+++ b/application/templates/transaction.html
@@ -5,6 +5,10 @@
 <h1>Transaction {{transaction.id}}</h1>
 
 <table>
+    <tr>
+      <td>Booking Date (EUR)</td>
+      <td>{{transaction.booking_date}}</td>    
+    </tr>
   <tr>
     <td>Amount (EUR)</td>
     <td>{{transaction.amount}}</td>    
