--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -29,10 +29,12 @@
             <li><a href="{{ url_for('auth_login') }}">Log in</a></li>
             <li><a href="{{ url_for('create_user') }}">Sign up</a></li>
         </ul>
-
-
         {% endif %}
       </nav>
+      {% if current_user.role == "ADMIN"%}
+      <p style="color:blue">ADMIN</p>
+      <a href="{{ url_for('get_admin_stats') }}">Go to Admin View</a>
+      {% endif %}
       <div class="container">
         <div class="col-md-8 col-md-offset-6">
           {% block body %}
