--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -36,13 +36,15 @@
       <a href="{{ url_for('get_admin_stats') }}">Go to Admin View</a>
       {% endif %}
       <div class="container">
-        <div class="col-md-8 col-md-offset-6">
-          {% block body %}
-
-          <p>
-  	     Content
-          </p>
-          {% endblock %}
+        <div class="row">
+          <div class="col-md-8 col-md-offset-6">
+            {% block body %}
+          
+            <p>
+  	       Content
+            </p>
+            {% endblock %}
+          </div>
         </div>
       </div>
     </div>
