Rudimentary paging for account transactions

--- a/application/templates/bankaccounts/singlebankaccount.html
+++ b/application/templates/bankaccounts/singlebankaccount.html
@@ -29,6 +29,15 @@
 </table>
 
 <h2>Account transactions</h2>
+
+<p>TODO: X out of X</p>
+{% if previousPage >= 0 %}
+<a href="{{ url_for('get_bankaccount', bankaccount_id=account.id, page=previousPage) }}">Previous page</a>
+{% endif %}
+{% if notLast%}
+<a href="{{ url_for('get_bankaccount', bankaccount_id=account.id, page=nextPage) }}">Next page</a>
+{% endif %}
+
 <table>
     <tr>
         <th>Booking Date</th>
