--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -37,7 +37,7 @@
       {% endif %}
       <div class="container">
         <div class="row">
-          <div class="col-md-8 col-md-offset-6">
+          <div class="col-md-12">
             {% block body %}
           
             <p>
