--- a/application/templates/categories/categories.html
+++ b/application/templates/categories/categories.html
@@ -9,7 +9,7 @@
 
     {% for category in categories %}
     <tr>
-        <td>{{ category.name }}</td>
+        <td><a href="{{ url_for('category', category_id = category.id) }}">{{ category.name }}</a></td>
         <td>
             {% if category.name != "No Category" %}
             <form method="POST" action="{{ url_for('delete_category', category_id=category.id) }}">
