--- a/application/templates/layout.html
+++ b/application/templates/layout.html
@@ -9,25 +9,23 @@
 
   <body>
     <div class="">
-      <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="navbar-header">
           <a class="navbar-brand" href="/">Pivo Slayer</a>
         </div>
         {% if current_user.is_authenticated %}
         <ul class="nav navbar-nav">
-          <li><a href="{{ url_for('bankaccounts') }}">Bank Accounts</a></li>
-          <li><a href="{{url_for('get_transactions')}}">Transactions</a></li>
-          <li><a href="{{url_for('transaction_form')}}">Add a transaction</a></li>
-          <li><a href="{{url_for('categories')}}">Categories</a></li>
-          <li><a href="{{ url_for('auth_logout') }} ">Logout</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('bankaccounts') }}">Bank Accounts</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('get_transactions')}}">Transactions</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('transaction_form')}}">Add a transaction</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{url_for('categories')}}">Categories</a></li>
+          <li class="nav-item"><a class="nav-link" href="{{ url_for('auth_logout') }} ">Logout</a></li>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <p>Logged in as {{ current_user.name }}</p>
-        </ul>
+        <span class="navbar-text" style="color: white">Logged in as {{ current_user.name }}</span>
         {% else %}
-        <ul class="nav navbar-right">
-            <li><a href="{{ url_for('auth_login') }}">Log in</a></li>
-            <li><a href="{{ url_for('create_user') }}">Sign up</a></li>
+        <ul class="nav navbar-nav">
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('auth_login') }}">Log in</a></li>
+            <li class="nav-item"><a class="nav-link" href="{{ url_for('create_user') }}">Sign up</a></li>
         </ul>
         {% endif %}
       </nav>
