--- a/application/templates/bankaccounts/accountsummary.html
+++ b/application/templates/bankaccounts/accountsummary.html
@@ -12,20 +12,21 @@
 <h2>{{ active }}</h2>
 <h3>Summary of debit transactions</h3>
 {% if debitSummary|length > 0 %}
-<table>
-    <th>
+<table class="table">
+    <thead class="thead-light">
         <tr>
-            <td>Category name</td>
-            <td>Sum of transactions in category</td>
+            <th>Category name</td>
+            <th>Sum of transactions in category</td>
         </tr>
-    </th>
-    
+    </thead>
+    <tbody>
         {% for category in debitSummary %}
         <tr>
             <td><a href="{{ url_for('category', category_id = category.id) }}">{{ category.name }}</a></td>
             <td>{{ category.amount }}</td>
         </tr>
         {% endfor %}
+    </tbody>
 </table>
 <canvas id="debitchart" width="600" height="400"></canvas>
 <script type="text/javascript">
@@ -46,13 +47,13 @@
 
     <h3>Summary of credit transactions</h3>
     {% if creditSummary|length > 0%}
-    <table>
-        <th>
+    <table class="table">
+        <thead class="thead-light">
             <tr>
-                <td>Category name</td>
-                <td>Sum of transactions in category</td>
+                <th>Category name</td>
+                <th>Sum of transactions in category</td>
             </tr>
-        </th>
+        </thead>
 
     {% for category in creditSummary %}
     <tr>
