--- a/application/templates/bankaccounts/bankaccounts.html
+++ b/application/templates/bankaccounts/bankaccounts.html
@@ -5,14 +5,18 @@
 
 
 <h1>Accounts</h1>
-<table>
+<table class="table">
+    <thead class="thead-light">
     <tr>
         <th>Name</th>
         <th>Bank</th>
         <th>Initial Balance</th>
         <th>Current Balance</th>
+        <th>Action</th>
     </tr>
+</thead>
     {% for account in accounts %}
+    <tbody>
     <tr>
         <td>
             <a href="{{ url_for('get_bankaccount', bankaccount_id=account.id) }}">
@@ -28,7 +32,9 @@
             </form>
         </td>
     </tr>
+
     {% endfor %}
+</tbody>
 </table>
 
 <h2>Create new Bank account</h2>
