--- a/application/templates/transaction.html
+++ b/application/templates/transaction.html
@@ -4,7 +4,7 @@
 
 <h1>Transaction {{transaction.id}}</h1>
 
-<table>
+<table class="table">
     <tr>
       <td>Booking Date (EUR)</td>
       <td>{{transaction.booking_date}}</td>    
