--- a/application/templates/bankaccounts/accountsummary.html
+++ b/application/templates/bankaccounts/accountsummary.html
@@ -6,10 +6,12 @@
 
     <h1>{{ account.name }}</h1>
     <a href="{{ url_for('get_bankaccount', bankaccount_id=account.id) }}">Back to account</a>
-    <a href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['ytd']) }}">Year to date</a>
-    <a href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['mtd']) }}">Month to date</a>
-    <a href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['all']) }}">All time</a>
-<h2>{{ active }}</h2>
+    <ul class="nav nav-tabs">
+        <li class="nav-item"><a {% if active == "ytd" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['ytd']) }}">Year to date</a></li>
+        <li class="nav-item"><a {% if active == "mtd" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['mtd']) }}">Month to date</a></li>
+        <li class="nav-item"><a {% if active == "all" %} class="nav-link active" {% else %} class="nav-link" {% endif %} href="{{ url_for('get_bankaccount_summary', bankaccount_id=account.id, period=['all']) }}">All time</a></li>
+    </ul>
+
 <h3>Summary of debit transactions</h3>
 {% if debitSummary|length > 0 %}
 <table class="table">
