--- a/application/templates/categories/categories.html
+++ b/application/templates/categories/categories.html
@@ -4,7 +4,7 @@
 
 <h1>Categories</h1>
 <p style="color: red">{{error}}</p>
-<table class="table">
+<table class="table table-sm">
     <thead class="thead-light">
         <tr>
             <th>Category name</th>
